--- a/feedback.html
+++ b/feedback.html
@@ -102,7 +102,7 @@
             font-size: 16px;
             width: 35rem;
             margin-left: 0.5rem;
-            transition: border-color 0.3s ease;
+            transition: border-color 0.8s ease;
         }
 
         .form-field input[type="text"]:focus,
@@ -117,7 +117,7 @@
         .submit-btn {
             width: 100%;
             max-width: 150px;
-            margin: 0 auto;
+            margin-left: 35%;
             padding: 10px 15px;
             text-align: center;
             border-radius: 5px;
