--- a/menu.html
+++ b/menu.html
@@ -122,7 +122,6 @@ a:hover
       <ul>
         <li><a href="#menu1">Gluten Free</a></li>
         <li><a href="#menu2">Nut Free</a></li>
-        <li><a href="#menu3">Special Menu</a></li>
       </ul>
     </nav>
   </header>
@@ -135,30 +134,40 @@ a:hover
         <h3>Vanilla Cake</h3>
         <p>Color: Light pink with the infusion of rose petals.</p>
         <p>Key Ingredients: Mainly made with coconut flour, along with other secret ingredients for a unique taste and texture.</p>
+        <p>Price: RM 78</p>
+        <p>Price: RM 7.8 per slice</p>
       </div>
       <div class="menu-item">
         <img src="images/14.png" alt="Item 2">
         <h3>Strawberry Cake</h3>
         <p>Color: Soft pink hues from the infusion of rose petals and fresh strawberries.</p>
         <p>Key Ingredients: Featuring coconut flour as the base, blended with an array of other carefully selected ingredients for an exquisite taste.</p>
+        <p>Price: RM 78</p>
+        <p>Price: RM 7.8 per slice</p>
       </div>
       <div class="menu-item">
         <img src="images/12.png" alt="Item 3">
         <h3>Pink Rose Lychee Cake</h3>
         <p>Color: A delicate shade of pink, reminiscent of blooming pink roses.</p>
         <p>Key Ingredients: Features lychee fruit and rose essence, carefully blended with other high-quality components to create a delectable harmony of flavors.</p>
+        <p>Price: RM 78</p>
+        <p>Price: RM 7.8 per slice</p>
       </div>
       <div class="menu-item">
         <img src="images/5.png" alt="Item 4">
         <h3>Flower Rainbow Cake</h3>
         <p>Color: A stunning burst of vibrant colors, resembling a rainbow of flowers in full bloom.</p>
         <p>Key Ingredients: Meticulously crafted with a variety of natural food colors to achieve the vivid rainbow effect, along with a medley of premium ingredients for a delightful taste.</p>
+        <p>Price: RM 78</p>
+        <p>Price: RM 7.8 per slice</p>
       </div>
       <div class="menu-item">
         <img src="images/7.png" alt="Item 5">
         <h3>Purple Yam Cake</h3>
         <p>Color: A rich, natural purple hue derived from the vibrant purple yam used in its preparation.</p>
         <p>Key Ingredients: Highlighted by the unique and flavorful purple yam, combined with a blend of complementary ingredients for a delightful taste and texture.</p>
+        <p>Price: RM 78</p>
+        <p>Price: RM 7.8 per slice</p>
       </div>
     </section>
   </main>
@@ -173,69 +182,46 @@ a:hover
         <h3>White Coffee Cake</h3>
         <p>Color: A light, pale hue that reflects the simplicity and elegance of this coffee-infused treat.</p>
         <p>Key Ingredients: Incorporates high-quality coffee essence or brewed coffee, along with a selection of premium ingredients for a delightful flavor profile.</p>
+        <p>Price: RM 78</p>
+        <p>Price: RM 7.8 per slice</p>
       </div>
       <div class="menu-item">
         <img src="images/16.png" alt="Item 2">
         <h3>Belgium Chocolate Cake</h3>
         <p>Chocolate Quality: Made with the finest, rich, and indulgent Belgian chocolate for an exquisite taste.</p>
         <p>Ingredients: Combines premium Belgian chocolate, butter, eggs, and other high-quality components for a decadent cake experience.</p>
+        <p>Price: RM 78</p>
+        <p>Price: RM 7.8 per slice</p>
       </div>
       <div class="menu-item">
         <img src="images/9.png" alt="Item 3">
         <h3>Indulgence Chocolate Cake</h3>
         <p>Chocolate Bliss: A heavenly creation that promises an ultimate indulgence with its intense chocolate flavor.</p>
         <p>Key Ingredients: Crafted with a generous amount of premium cocoa powder, high-quality chocolate, and other delectable components to create a truly indulgent experience.</p>
+        <p>Price: RM 78</p>
+        <p>Price: RM 7.8 per slice</p>
       </div>
       <div class="menu-item">
         <img src="images/4.png" alt="Item 4">
         <h3>Strawberry Chocolate Cake</h3>
         <p>Fruity-Chocolate Fusion: A delightful marriage of sweet, juicy strawberries and rich, velvety chocolate.</p>
         <p>Key Ingredients: Showcasing the perfect blend of fresh strawberries and premium chocolate, along with other high-quality components for a harmonious flavor profile.</p>
+        <p>Price: RM 78</p>
+        <p>Price: RM 7.8 per slice</p>
       </div>
       <div class="menu-item">
         <img src="images/2.png" alt="Item 5">
         <h3>Vanilla Chocolate Cake</h3>
         <p>Classic Harmony: A delightful combination of the timeless vanilla flavor and the indulgence of rich chocolate.</p>
         <p>Key Ingredients: Blending the essence of pure vanilla and high-quality chocolate, along with other premium ingredients for a well-balanced taste.</p>
+        <p>Price: RM 78</p>
+        <p>Price: RM 7.8 per slice</p>
       </div>
     </section>
   </main>
 
   <!-- Add more sections for "About Us" and "Contact" if desired -->
   
-  <main id="menu3">
-    <h2>Special Menu</h2>
-    <section class="menu-items">
-      <div class="menu-item">
-        <img src="images/17.png" alt="Item 1">
-        <h3>Beetroot Red Velvet Cake</h3>
-        <p>Natural Red Hue: Gains its striking red color from the addition of beetroot, making it visually appealing and unique.</p>
-        <p>Key Ingredients: Combines grated beetroot with special red velvet cake components, such as coconut flour and coconut cream frosting.</p>
-      </div>
-      <div class="menu-item">
-        <img src="images/8.png" alt="Item 4">
-        <h3>Rasberry Cheesecake</h3>
-        <p>Burst of Raspberry Flavor: A delectable cheesecake featuring a delightful burst of raspberry essence throughout.</p>
-        <p>Key Ingredients: Crafted with a generous amount of fresh, juicy raspberries and creamy, rich cream cheese, along with other premium components.</p>
-      </div>
-      <div class="menu-item">
-        <img src="images/3.png" alt="Item 2">
-        <h3>Mix Slice Cake</h3>
-        <p>Enjoy a variety of delicious flavors with our Mix 6 Slice Cake Box! Indulge in six unique and mouthwatering cake slices, individually wrapped for your convenience. Whether it's for a party or a personal treat, savor the joy of different flavors in every bite!</p>
-      </div>
-      <div class="menu-item">
-        <img src="images/10.png" alt="Item 3">
-        <h3>Cake in Jar</h3>
-        <p>Enjoy a delightful variety of cake flavors in our Mini Jar Cake Collection! These adorable jars are perfect for on-the-go treats or as delightful party favors. Indulge in rich chocolate, fresh berries, and comforting vanilla, all sealed for freshness. Treat yourself or surprise loved ones with these charming and scrumptious desserts!</p>
-      </div>
-      <div class="menu-item">
-        <img src="images/13.png" alt="Item 5">
-        <h3>Various of Pastries</h3>
-        <p>Create your own pastry adventure with our Mix and Match Pastries! Choose from a wide selection of delicious treats, like croissants, brownies, scones, and fruit tarts. Indulge in a variety of flavors for a delightful dessert experience. Perfect for any occasion or to treat yourself to something special!</p>
-      </div>
-    </section>
-  </main>
-
   <footer>
     <p>&copy; 2023 Artisan Bakehouse. All rights reserved.</p>
   </footer>
