--- a/beverages.html
+++ b/beverages.html
@@ -122,7 +122,6 @@ a:hover
       <ul>
         <li><a href="#menu1">Coffee</a></li>
         <li><a href="#menu2">Juice</a></li>
-        <li><a href="#menu3">Special Baverages</a></li>
       </ul>
     </nav>
   </header>
@@ -131,11 +130,12 @@ a:hover
     <h2>Coffee</h2>
     <section class="menu-items">
       <div class="menu-item">
-        <img src="images/17 (2).png" alt="Item 1">
+        <img src="images/32.png" alt="Item 1">
         <h3>Americano</h3>
         <p>Aroma: A delightful scent of freshly brewed coffee, inviting you to savor its rich flavor.</p>
         <p>Ingredients: Made simply with a shot of espresso and hot water, creating a smooth and bold coffee experience.</p>
         <p>Option: Cold, Frappe and Hot</p>
+        <p>Range Price: RM 8 - RM 12</p>
       </div>
       <div class="menu-item">
         <img src="images/18.png" alt="Item 2">
@@ -143,6 +143,7 @@ a:hover
         <p>Creamy Froth: Features a creamy and velvety layer of frothed milk on top, adding a luxurious touch to the coffee.</p>
         <p>Ingredients: A harmonious combination of espresso and steamed milk, creating a balanced and indulgent coffee beverage.</p>
         <p>Option: Cold, Frappe and Hot</p>
+        <p>Range Price: RM 8 - RM 12</p>
       </div>
       <div class="menu-item">
         <img src="images/19.png" alt="Item 3">
@@ -150,6 +151,7 @@ a:hover
         <p>Vibrant Green Hue: Boasts a beautiful and inviting green color, characteristic of its high-quality matcha.</p>
         <p>Ingredients: A delightful combination of premium matcha powder, steamed milk, and a touch of sweetener, creating a well-balanced and flavorful drink.</p>
         <p>Option: Cold, Frappe and Hot</p>
+        <p>Range Price: RM 8 - RM 12</p>
       </div>
       <div class="menu-item">
         <img src="images/20.png" alt="Item 4">
@@ -157,6 +159,7 @@ a:hover
         <p>Decadent Chocolate: A delightful blend of rich espresso and creamy chocolate, offering the best of both worlds.</p>
         <p>Ingredients: Combines a shot of espresso with velvety steamed milk and a generous amount of luscious chocolate syrup.</p>
         <p>Option: Cold, Frappe and Hot</p>
+        <p>Range Price: RM 8 - RM 12</p>
       </div>
       <div class="menu-item">
         <img src="images/21.png" alt="Item 5">
@@ -164,13 +167,14 @@ a:hover
         <p>Creamy and Indulgent: A luxurious coffee beverage that combines the richness of a latte with the sweetness of a mocha.</p>
         <p>Ingredients: Made with a shot of espresso, velvety steamed milk, a generous serving of chocolate syrup, and topped with whipped cream and chocolate shavings.</p>
         <p>Option: Cold, Frappe and Hot</p>
+        <p>Range Price: RM 8 - RM 12</p>
       </div>
     </section>
   </main>
 
   <!-- Add more sections for "About Us" and "Contact" if desired -->
 
-  <main id="menu2">
+<main id="menu2">
     <h2>Juice</h2>
     <section class="menu-items">
       <div class="menu-item">
@@ -178,70 +182,41 @@ a:hover
         <h3>Fresh Orange</h3>
         <p>Juicy Citrus Burst: Experience the refreshing and zesty flavor of nature's juicy orange fruit.</p>
         <p>Option: Cold and Frappe only</p>
+        <p>Range Price: RM 10 - RM 12</p>
       </div>
       <div class="menu-item">
         <img src="images/23.png" alt="Item 2">
         <h3>Apple Juice</h3>
         <p>Crisp and Refreshing: Enjoy the naturally sweet and refreshing taste of freshly pressed apple juice.</p>
         <p>Option: Cold and Frappe only</p>
+        <p>Range Price: RM 10 - RM 12</p>
       </div>
       <div class="menu-item">
         <img src="images/25.png" alt="Item 3">
         <h3>Carrot Juice and Milk</h3>
         <p>Nutritious and Creamy: A wholesome and creamy beverage that combines the goodness of carrots with the richness of milk.</p>
         <p>Option: Cold and Frappe only</p>
+        <p>Range Price: RM 10 - RM 12</p>
       </div>
       <div class="menu-item">
         <img src="images/24.png" alt="Item 4">
         <h3>Watermelon Juice</h3>
         <p>Refreshing and Juicy: Enjoy the hydrating and mouthwatering experience of biting into a juicy slice of watermelon.</p>
         <p>Option: Cold and Frappe only</p>
+        <p>Range Price: RM 10 - RM 12</p>
       </div>
       <div class="menu-item">
         <img src="images/26.png" alt="Item 5">
         <h3>Lychee Juice</h3>
         <p>Exotic Sweetness: Indulge in the luscious and exotic sweetness of freshly pressed lychee juice.</p>
         <p>Option: Cold and Frappe only</p>
+        <p>Range Price: RM 10 - RM 12</p>
       </div>
     </section>
   </main>
 
   <!-- Add more sections for "About Us" and "Contact" if desired -->
   
-  <main id="menu3">
-    <h2>Special Baverages</h2>
-    <section class="menu-items">
-      <div class="menu-item">
-        <img src="images/27.png" alt="Item 1">
-        <h3>Three Berry Smoothie</h3>
-        <p>Berrylicious Blend: A delightful and nutritious smoothie featuring a medley of three delicious berries which are strawberry, blueberry and black raspberry.</p>
-        <p>Option: Frappe only</p>
-      </div>
-      <div class="menu-item">
-        <img src="images/28.png" alt="Item 4">
-        <h3>Three Layer Tea</h3>
-        <p>Unique Layered Delight: A visually striking tea with three distinct layers of flavors and colors.</p>
-        <p>Option: Cold and Hot only</p>
-      </div>
-      <div class="menu-item">
-        <img src="images/29.png" alt="Item 2">
-        <h3>Tutti Fruity</h3>
-        <p>Colorful and Fruity: A vibrant mix of candied fruits that adds a burst of color and sweetness to various desserts.</p>
-        <p>Option: Cold and Frappe only</p>
-      </div>
-      <div class="menu-item">
-        <img src="images/30.png" alt="Item 3">
-        <h3>Boba Milk Tea</h3>
-        <p>Chewy Tapioca Pearls: A creamy and refreshing tea beverage with the added fun of chewy boba pearls.</p>
-        <p>Option: Cold only</p>
-      </div>
-      <div class="menu-item">
-        <img src="images/31.png" alt="Item 5">
-        <h3>Various Baverages in Can</h3>
-        <p>Customize your own beverages with our "Produce Can" service! Choose from a variety of high-quality teas, coffees, fruit juices, and more to create your dream drink. Mix and match your favorite ingredients for a unique and satisfying experience. Our staff will guide you to find the perfect balance. Embrace creativity and enjoy your personalized beverage!</p>
-      </div>
-    </section>
-  </main>
 
   <footer>
     <p>&copy; 2023 Artisan Bakehouse. All rights reserved.</p>
