--- a/special.html
+++ b/special.html
@@ -3,7 +3,110 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cafe Menu</title>
-  <link rel="stylesheet" tyoe="text/css" href="css/style.css">
+    <style>
+    body {
+    font-family: Arial, sans-serif;
+    line-height: 1.6;
+    margin: 0;
+    padding: 0;
+  }
+  
+  header {
+    background-color: #333;
+    color: #fff;
+    padding: 20px;
+  }
+  
+  header h1 {
+    margin: 0;
+  }
+  
+  nav ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+  
+  nav li {
+    display: inline;
+    margin-right: 20px;
+  }
+  
+  nav a {
+    color: #fff;
+    text-decoration: none;
+  }
+
+  main {
+    padding: 20px;
+  }
+  
+  .menu-items {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 20px;
+  }
+  
+  .menu-item {
+    background-color: #fff;
+    border-radius: 10px;
+    padding: 15px;
+    margin-bottom: 15px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  }
+
+  .menu-item:hover {
+    color:whitesmoke;
+    background-size: cover;
+    background-color:rgb(141, 145, 151);
+  }
+
+  .menu-item img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    border-radius: 5px;
+  }
+  
+  .menu-item h3 {
+    margin: 10px 0;
+  }
+
+  p{
+    text-align: justify;
+  }
+
+  a {
+    color:whitesmoke;
+    font-size:large;
+    text-align:center;
+    padding-right: 6.5%;
+    text-decoration: dotted;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight: 500;
+    }
+
+a:hover
+   {
+    color:whitesmoke;
+    background-size: cover;
+    background-color:rgb(24, 26, 29);
+   }
+
+   .menu
+   {
+       width: 100%;
+       height: 10px;
+       padding-bottom: 10px;
+   }
+
+   footer {
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    padding: 10px;
+  }
+  </style>
 </head>
 <body>
   <header>
